fixed extended scrolling on mobile form pages

--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -137,7 +137,7 @@
     }
 
     .refresh-btn {
-        height: 31px;
+        height: 30px;
         padding: 0px 0px 2px 0px;
     }
 
